--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -13,9 +13,56 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: npm
+
       - uses: google-github-actions/release-please-action@v3
         with:
           release-type: node
           package-name: release-please-action
-          default-branch: master
-          token: ${{secrets.CR_PAT}}
+          default-branch: dev
+          token: ${{secrets.GH_TOKEN}}
+
+      # Checkout repos
+      - uses: actions/checkout@v3
+        with:
+          repository: koenkk/zigbee2mqtt
+          path: ./z2m
+      - uses: actions/checkout@v3
+        with:
+          repository: koenkk/zigbee2mqtt
+          path: ./z2m-master
+          ref: master
+      - uses: actions/checkout@v3
+        with:
+          repository: koenkk/zigbee2mqtt
+          path: ./z2m-changelog
+          ref: release-please--branches--dev--components--release-please-action
+
+      - name: Update latest-dev tag
+        run: |
+          cd z2m
+          git push --delete origin latest-dev
+          git tag latest-dev
+          git push origin latest-dev
+      - name: Update latest-dev release changelog
+        run: |
+          PR=$(echo '${{ steps.release.outputs.pr }}' | jq -r '.number')
+          MASTER_Z2M_VERSION=$(cat z2m-master/package.json | jq -r '.version')
+          MASTER_ZHC_VERSION=$(cat z2m-master/package.json | jq -r '.dependencies."zigbee-herdsman-converters"')
+          MASTER_ZH_VERSION=$(cat z2m-master/package.json | jq -r '.dependencies."zigbee-herdsman"')
+          cp z2m-changelog/CHANGELOG.md z2m
+          cd z2m
+          npm ci
+          node scripts/generateChangelog.js $MASTER_Z2M_VERSION $MASTER_ZHC_VERSION $MASTER_ZH_VERSION >> ../changelog
+        env:
+          GH_TOKEN: ${{secrets.GH_TOKEN}}
+      - uses: ncipollo/release-action@v1
+        with:
+          bodyFile: changelog
+          prerelease: true
+          name: latest-dev
+          allowUpdates: true
+          tag: latest-dev
