--- a/.github/workflows/update_dep.yml
+++ b/.github/workflows/update_dep.yml
@@ -28,6 +28,7 @@ jobs:
         commit-message: "fix(ignore): update ${{ github.event.client_payload.package }} to ${{ github.event.client_payload.version }}"
         branch: "deps/${{ github.event.client_payload.package }}"
         title: Update ${{ github.event.client_payload.package }} to ${{ github.event.client_payload.version }}
+        token: ${{ secrets.GH_TOKEN }}
     - run: sleep 5 # Otherwise pull request may not exist yet causing automerge to fail
     - uses: peter-evans/enable-pull-request-automerge@v3
       if: steps.cpr.outputs.pull-request-operation == 'created'
