chore: improve merge_master_to_dev.yml

--- a/.github/workflows/merge_master_to_dev.yml
+++ b/.github/workflows/merge_master_to_dev.yml
@@ -15,4 +15,5 @@ jobs:
           type: now
           head_to_merge: master
           target_branch: dev
+          message: "chore: merge master to dev"
           github_token: ${{ secrets.GH_TOKEN }}
