chore: fix ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,6 @@
 name: ci
 
-on:
-  pull_request:
-  push:
-    branches-ignore:
-      - deps/*
-    tags:
-      - '**'
+on: [pull_request, push]
 
 permissions:
   contents: write
