--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "@types/js-yaml": "^4.0.5",
     "@types/object-assign-deep": "^0.4.0",
     "@types/rimraf": "^3.0.2",
-    "@types/ws": "^8.5.5",
+    "@types/ws": "8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "babel-jest": "^29.5.0",
