chore: fix update_deps

--- a/.github/workflows/update_deps.yml
+++ b/.github/workflows/update_deps.yml
@@ -29,3 +29,4 @@ jobs:
         commit-message: "fix(ignore): update dependencies"
         branch: "deps/all"
         title: Update dependencies
+        token: ${{ secrets.GH_TOKEN }}
