chore: Cache commit users in changelog generator

--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -47,6 +47,11 @@ jobs:
           git push --delete origin latest-dev
           git tag latest-dev
           git push origin latest-dev
+      - name: Cache commit-user-lookup.json
+        uses: actions/cache@v3
+        with:
+          path: scripts/commit-user-lookup.json
+          key: always
       - name: Update latest-dev release changelog
         run: |
           MASTER_Z2M_VERSION=$(cat z2m-master/package.json | jq -r '.version')
