--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -63,7 +63,11 @@ jobs:
           node scripts/generateChangelog.js $MASTER_Z2M_VERSION $MASTER_ZHC_VERSION $MASTER_ZH_VERSION >> ../changelog.txt
         env:
           GH_TOKEN: ${{secrets.GH_TOKEN}}
-      - run: cat scripts/commit-user-lookup.json
+      - run: |
+          ls -l
+          echo bla
+          ls -l scripts
+          cat scripts/commit-user-lookup.json
       - uses: ncipollo/release-action@v1
         with:
           bodyFile: changelog.txt
