--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "winston-transport": "^4.5.0",
     "ws": "^8.13.0",
     "zigbee-herdsman": "0.17.1",
-    "zigbee-herdsman-converters": "15.33.1-hotfix.0",
+    "zigbee-herdsman-converters": "15.37.0",
     "zigbee2mqtt-frontend": "0.6.131"
   },
   "devDependencies": {
