fix: Add secure default config. https://github.com/Koenkk/zigbee2mqtt/issues/16188

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ data/extension
 
 # Ignore config
 data/*.yaml
+!data/configuration.example.yaml
 
 # commit-user-lookup.json
 scripts/commit-user-lookup.json
