--- a/data/configuration.yaml
+++ b/data/configuration.yaml
@@ -1,20 +1,20 @@
-# Home Assistant integration (MQTT discovery)
 homeassistant: false
-
-# allow new devices to join
 permit_join: true
-
-# MQTT settings
+frontend: true
 mqtt:
-  # MQTT base topic for zigbee2mqtt MQTT messages
   base_topic: zigbee2mqtt
-  # MQTT server URL
-  server: 'mqtt://localhost'
-  # MQTT server authentication, uncomment if required:
-  # user: my_user
-  # password: my_password
-
-# Serial settings
+  server: mqtt://localhost
 serial:
-  # Location of CC2531 USB sniffer
   port: /dev/ttyACM0
+advanced:
+  homeassistant_legacy_entity_attributes: false
+  legacy_api: false
+  legacy_availability_payload: false
+  log_level: debug
+external_converters:
+  - switch.js
+device_options:
+  legacy: false
+devices:
+  '0xac8b40feffca4c40':
+    friendly_name: '0xac8b40feffca4c40'
