--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "jszip": "^3.10.1",
     "mkdir-recursive": "^0.4.0",
     "moment": "^2.29.4",
-    "mqtt": "5.0.2",
+    "mqtt": "5.0.3",
     "object-assign-deep": "^0.4.0",
     "rimraf": "^5.0.1",
     "semver": "^7.5.4",
@@ -64,29 +64,29 @@
     "zigbee2mqtt-frontend": "0.6.133"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.10",
+    "@babel/core": "^7.22.11",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
-    "@babel/preset-typescript": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.11",
     "@types/debounce": "^1.2.1",
     "@types/finalhandler": "^1.2.0",
     "@types/humanize-duration": "^3.27.1",
-    "@types/jest": "^29.5.3",
+    "@types/jest": "^29.5.4",
     "@types/js-yaml": "^4.0.5",
     "@types/object-assign-deep": "^0.4.0",
-    "@types/readable-stream": "^4.0.0",
+    "@types/readable-stream": "4.0.0",
     "@types/rimraf": "^3.0.2",
     "@types/ws": "8.5.4",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "babel-jest": "^29.6.2",
-    "eslint": "^8.47.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "babel-jest": "^29.6.4",
+    "eslint": "^8.48.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jest": "^27.2.3",
-    "jest": "^29.6.2",
+    "jest": "^29.6.4",
     "tmp": "^0.2.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "jest": {
     "coverageThreshold": {
